# ipp_magnitude_fail

./: CMakeLists.txt  README.md
include/: device_info.h  ipp_magnitude.h  ipp_sobel.h  sycl_median.h  util.h
src/: device_info.cpp  ipp_magnitude.cpp  ipp_sobel.cpp  sycl_median.cpp  test.cpp  test_ipp_magnitude.cpp  test_ipp_sobel.cpp  util.cpp
src/common/: slog.hpp  stimer.hpp
